<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_menu_search"
        android:title="@string/action_menu_collections_search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/action_menu_filter"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_menu_collections_filter"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_menu_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/action_menu_collections_sort"
        app:showAsAction="ifRoom" />

</menu>