<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.ScannedActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/scanned_qr_code_result"
        android:textColor="@color/littleWhite"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/scannedName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_name"
            android:textColor="@color/colorDivider"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scannedNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/scannedUniComp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_university"
            android:textColor="@color/colorDivider"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scannedUniCompTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="15dp">

        <TextView
            android:id="@+id/scannedMajPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c_major"
            android:textColor="@color/colorDivider"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/scannedMajPosTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>